examples/test/testpolicy2429.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2429
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key9: value39
      key19: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value17
          key11: value20
          key40: value43
      podSelector:
        matchLabels:
          key29: value43
          key17: value33
